[tool.poetry]
name = "fdmoe"
version = "0.1.0"
description = ""
authors = ["ize"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.8"
anime-face-detector = "^0.0.9"
numpy = "^1.23.1"
fastapi = "^0.79.0"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
opencv-contrib-python-headless = "<=4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
